--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "mathjs": "^9.3.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-base64": "^0.2.1",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
+    "react-native-share": "^6.0.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
