Basic Auth is in place

--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "lint:fix": "eslint app/ --fix"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^3.4.31",
+    "@aws-amplify/core": "^3.8.23",
     "@react-native-async-storage/async-storage": "^1.15.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@types/mathjs": "^6.0.11",
+    "amazon-cognito-identity-js": "^4.6.1",
+    "aws-amplify": "^3.4.0",
+    "aws-amplify-react-native": "^4.3.3",
     "axios": "^0.21.1",
     "mathjs": "^9.3.1",
     "react": "17.0.1",
@@ -30,6 +36,7 @@
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-indicators": "^0.17.0",
+    "react-native-keychain": "^7.0.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
