--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-amplify/auth": "^3.4.31",
     "@aws-amplify/core": "^3.8.23",
+    "@dudigital/react-native-zoomable-view": "^1.0.16",
     "@react-native-async-storage/async-storage": "^1.15.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
@@ -25,16 +26,22 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@types/mathjs": "^6.0.11",
+    "@types/react-native-calendar-picker": "^7.0.1",
     "amazon-cognito-identity-js": "^4.6.1",
     "aws-amplify": "^3.4.0",
     "aws-amplify-react-native": "^4.3.3",
     "axios": "^0.21.1",
     "mathjs": "^9.3.1",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-base64": "^0.2.1",
+    "react-native-calendar-picker": "^7.1.2",
+    "react-native-calendario": "^2.1.1",
+    "react-native-calendars": "^1.1262.0",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-indicators": "^0.17.0",
     "react-native-keychain": "^7.0.0",
     "react-native-reanimated": "^2.1.0",
