--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-indicators": "^0.17.0",
     "react-native-keychain": "^7.0.0",
+    "react-native-modal": "^11.10.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
