--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-calendario": "^2.1.1",
     "react-native-calendars": "^1.1262.0",
     "react-native-fast-image": "^8.3.4",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-indicators": "^0.17.0",
@@ -48,7 +49,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
-    "react-native-share": "^6.0.1",
+    "react-native-share": "^6.2.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
